Uploaded the backported edition of Scout449 to Java 1.3. This has not been tested yet.